--- a/class_exercise_1/Class_Exercise_1.ipynb
+++ b/class_exercise_1/Class_Exercise_1.ipynb
@@ -2,8 +2,41 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "f6c48809",
+   "execution_count": 42,
+   "id": "aa29aef6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "6\n",
+      "10\n",
+      "15\n",
+      "21\n",
+      "28\n",
+      "36\n",
+      "45\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Exercise 2 (Use a loop to do this)\n",
+    "def numbers(n):\n",
+    "    start = 0\n",
+    "    for number in range (1, n+1):\n",
+    "        start = start + number\n",
+    "        print (start)\n",
+    "numbers (10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "a4d2e98e",
    "metadata": {},
    "outputs": [
     {
@@ -15,18 +48,11 @@
     }
    ],
    "source": [
+    "#Exercise 3 (more efficient way)\n",
     "n=10\n",
     "suma = n*(n+1)/2\n",
     "print(suma)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "767aef4d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
